tests/NormalTests/paczka1/fuzzy1/62465314.err
Error in line 5: THq8Kk A174 96,4
Error in line 1: 8bkQezbpV A506 24,4
Error in line 22: 8bkQezbpV A>74 29,9
Error in line 19: 8bkQezbpV A858 22,4
Error in line 25: 8bkQezbpV A174 76,2
